# jni-maven-guide

./: .gitignore  CMakeLists.txt  README.md  assembly.xml  autobuild.sh  pom.xml
src/main/c/: Sample01.cpp
src/main/java/learn/jni/: LibLoader.java  Sample01.java
